crates/osp-core/tests/compile_fail/c6_intent_carries_physical_vector.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/c6_intent_carries_physical_vector.rs:14:9
   |
10 |     let _evidence = ObservedCodeEvidence::new(
   |                     ------------------------- arguments to this function are incorrect
...
14 |         ConceptualIntentVector::new(0.5, 0.5, 0.5, 0.5, 0.5, 0.5),
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `PhysicalCodeVector`, found `ConceptualIntentVector`
   |
note: associated function defined here
  --> src/anchoring/types.rs
   |
   |     pub fn new(
   |            ^^^
